plugins/wasm-go/extensions/rewrite/envoy.yaml
admin:
  address:
    socket_address:
      protocol: TCP
      address: 0.0.0.0
      port_value: 9901
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address:
          protocol: TCP
          address: 0.0.0.0
          port_value: 10000
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                scheme_header_transformation:
                  scheme_to_overwrite: https
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/"
                          name: "foo"
                          route:
                            cluster: httpbin
                http_filters:
                  - name: wasmdemo
                    typed_config:
                      "@type": type.googleapis.com/udpa.type.v1.TypedStruct
                      type_url: type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      value:
                        config:
                          name: wasmdemo
                          vm_config:
                            runtime: envoy.wasm.runtime.v8
                            code:
                              local:
                                filename: /etc/envoy/main.wasm
                          configuration:
                            "@type": "type.googleapis.com/google.protobuf.StringValue"
                            value: |
                              {
                                  "rewrite_rules": [
                                      {
                                        "match_path_type": "prefix",
                                        "case_sensitive": false,
                                        "match_hosts": ["foo.bar.com"],
                                        "match_paths": ["/v1/api/get"],
                                        "rewrite_host": "prefix.example.com",
                                        "rewrite_path": "/get"
                                      },
                                      {
                                        "match_path_type": "regex",
                                        "case_sensitive": false,
                                        "match_hosts": ["aa.bb.cc", "foo.bar.com"],
                                        "match_paths": ["/abc/(get)", "/(get)/.*\\.html"],
                                        "rewrite_host": "regex.example.com",
                                        "rewrite_path": "/$1"
                                      },
                                      {
                                        "match_path_type": "exact",
                                        "case_sensitive": false,
                                        "match_hosts": ["hello.world.com", "*.example.com", "aa.bb.*"],
                                        "match_paths": ["/v1/get", "/abc/get/"],
                                        "rewrite_host": "wildcard.example.com",
                                        "rewrite_path": "/get"
                                      },
                                      {
                                        "match_path_type": "regex",
                                        "case_sensitive": true,
                                        "match_hosts": ["xx.yy.ZZ"],
                                        "match_paths": ["/API/(get)", "/test/(get)/.*\\.HTML"],
                                        "rewrite_host": "case-sensitive.example.com",
                                        "rewrite_path": "/$1"
                                      }
                                  ]
                              }
                  - name: envoy.filters.http.router
  clusters:
    - name: httpbin
      connect_timeout: 30s
      type: LOGICAL_DNS
      dns_lookup_family: V4_ONLY
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: httpbin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: httpbin
                      port_value: 80
